# examples

./: .gitignore  .gitmodules  README.md  cotracker.sh  inference.py  llama2_c.yaml  vessl-intro.ipynb
Detic/: README.md  predict.py  train_net.py
Dreambooth-Stable-Diffusion/: merge_embeddings.py
InstructDiffusion/: InstructDiffusion.yaml  InstructDiffusion_inference.yaml  InstructDiffusion_streamlit.yaml  edit_cli.py  streamlit_InstructDiffusion.py
LLM_llama_2_LOTR/: infer_tolkien_llama_2.py  serve_tolkien_llama_2.py  serve_tolkien_llama_2_7B.py  train_tolkien_llama_2.py  train_tolkien_llama_2_7B.py  train_tolkien_llama_2_V100.py
LLaVA-13B/: LLaVA-13B_inference.py  LLaVA-13B_streamlit.py  requirements.txt
LlamaIndex/: infer_LlamaIndex.py  requirements.txt  serve_LlamaIndex.py
LoRa/: lora_playground.yaml  lora_training.yaml  run.yaml  utils.py
SSD-1B/: SSD-1B.yaml  SSD-1B_inference.py  SSD-1B_streamlit.py  requirements.txt
TimesFM/: finetune.py  pyproject.toml  requirements.txt  update_dep.py
asr-demo/: main.py  requirements.txt
cifar/: README.md
co-tracker/: selected_points.npy  streamlit_cotracker.py  yaml_cotracker_inference.yaml  yaml_cotracker_streamlit.yaml
credit_scoring/: Makefile  README.md  app.py  bentoML.py  bentofile.yaml  iris_classifier.ipynb  main.py  model.py  requirements.inference.txt  requirements.txt  run.py  service.py
deepcache/: README.md  main.py  requirements.txt  run.yaml
deprecated/: infer_tolkien_llama_2.py  vessl-intro.ipynb
detectron2/: README.md  (+4 more)
runs/langdechat/: README.md  app.py  pyproject.toml  run.yaml
(+921 files in other folders)
