[tool.poetry]
name = "gradio-app"
version = "0.1.0"
description = ""
authors = ["Kyle Lee <kyle@vessl.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
